# LabelStudio-types

./: pyproject.toml
Types/: AnnotationResult.py
